Ultima actualizacion actividad 1

--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -55,10 +55,10 @@
                     <form method="get" action="">
                         <div class="item-busqueda">
                             <input type="text" 
-                             name="name"  placeholder="¿Adonde vas?" autocomplete="places" required>
+                             name="name"  placeholder="¿Adonde vas?" aria-autocomplete="list" list="places" required>
                         </div>
 
-                        <datalist id="places" name="places">
+                        <datalist id="places">
                             <option value="Madrid">Madrid</option>
                             <option value="Barcelona"></option>
                             <option value="Paris"></option>
